[CXFXJC-27]ensure xjc plugin can work with java11